0.99.0 UNRELEASED

BUG FIXES

   * Guard setup() call when not loaded as __main__. (Robert Collins)

FEATURES

  * Add support for Indicator Application (Sense Hofstede, Jelmer Vernooij,
    #518179)

0.98.0 2010-02-24

BUG FIXES

  * Fix relative import in olive menu.
    (Mathias Brodala, #269883)

  * Fix typo in checkout dialog.
    (Jasper Groenewegen, #466507)

  * Adds help for ginit and gtags.
    (Andrew Starr-Bochicchio, #512701)

0.97.0 2009-08-25

BUG FIXES

  * Avoid GnomeKeyringCredentialStore traceback on Ubuntu Hardy
    by being more tolerant about gobject methods availability.
    (Vincent Ladeuil, #403430)
  
  * Fixed emblem and nautilus bzr-status column for ignored files.
    (Lucas Shrewsbury, #294632)
    
  * Fixed emblem and nautilus bzr-status column for unversioned files.
    (Lucas Shrewsbury, #417966)

  * Switch to using disutils sdist instead of bzr export.
    (Mark Lee, #398242)

0.96.2	2009-07-08

 BUG FIXES

  * Same player shoots again. Version credits.pickle and rebuild the tarball
    after running 'python ./setup.py build_credits', update
    http://bazaar-vcs.org/bzr-gtk/releasing accordingly.  
    (Vincent Ladeuil, #397526)
 
0.96.1	2009-07-08

 BUG FIXES
 
  * Rebuild the tarball after running 'python ./setup.py build_credits',
    update http://bazaar-vcs.org/bzr-gtk/releasing accordingly.
   (Vincent Ladeuil, #397526)
 

0.96.0	2009-07-08

 UI
 
  * Add colored status messages in Olive file list (Jasper Groenewegen)

  * Use the new progress bar implementation from bzrlib.
   (Vincent Ladeuil, 385191)

 CHANGES
 
  * Add ginfo command line option (Jasper Groenewegen)
  
  * Diff window uses GtkSourceView2 now. (Szilveszter Farkas)

 BUG FIXES
 
  * Fix the Branch/Get dialog refusing to open after hitting Cancel. (Markus
  Korn, #294396)

  * Fix Olive homepage URL. (#255152)

  * Fix gannotate.conf handling. (Vincent Ladeuil, #373157)

  * Save commit messages at uncommit time, restore them at